# ElyServer

./: .clang-format  .gitignore  CMakeLists.txt  ElyServer.kdev4  README.md
DBServer/: CMakeLists.txt  DBServer.cpp  DBServer.h  DBServer.xml
LoginGate/: CMakeLists.txt  LoginGate.cpp  LoginGate.h  LoginGate.xml
engine/: ely_common.h  server_base.cpp  server_base.h  xml_config.cpp  xml_config.h
